--- a/src/tool/cppwinrt/test_cpp/unit_tests.vcxproj
+++ b/src/tool/cppwinrt/test_cpp/unit_tests.vcxproj
@@ -101,7 +101,7 @@
       <AdditionalDependencies>windowsapp.lib</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
+      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_base.winmd $(OutputPath)test_component_derived.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>
@@ -127,7 +127,7 @@
       <AdditionalDependencies>windowsapp.lib</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
+      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_base.winmd $(OutputPath)test_component_derived.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>
@@ -153,7 +153,7 @@
       <AdditionalDependencies>windowsapp.lib</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
+      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_base.winmd $(OutputPath)test_component_derived.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>
@@ -183,7 +183,7 @@
       <AdditionalDependencies>windowsapp.lib</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
+      <Command>$(OutputPath)cppwinrt -in $(OutputPath)test_component.winmd $(OutputPath)test_component_base.winmd $(OutputPath)test_component_derived.winmd $(OutputPath)test_component_no_pch.winmd -out "$(ProjectDir)Generated Files" -ref local -verbose</Command>
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>
@@ -214,6 +214,7 @@
     <ClCompile Include="enum.cpp" />
     <ClCompile Include="final_release.cpp" />
     <ClCompile Include="GetMany.cpp" />
+    <ClCompile Include="hierarchy.cpp" />
     <ClCompile Include="iid_ppv_args.cpp" />
     <ClCompile Include="interop.cpp" />
     <ClCompile Include="invalid_events.cpp" />
